collapse indicator fix

--- a/scss/_collapse-indicators.scss
+++ b/scss/_collapse-indicators.scss
@@ -78,3 +78,9 @@ span[title="Unfold line"]:hover, //end of source mode (legacy)
 		transform: rotate(0deg);
 	}
 }
+
+
+.mod-cm6 .collapse-indicator {
+	font-family: var(--font-sans);
+	font-size: 1.1rem;
+}
